--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-certifi==2021.10.8
-elasticsearch==7.16.2
-urllib3==1.26.7
+elasticsearch==8.15.1
+pyyaml==6.0.2
+#requests==2.32.3
+#certifi==2024.8.30
+#charset-normalizer==3.3.2
+#idna==3.10
+#urllib3==2.2.3
